[package]
name = "redis-scanner"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alec Embke <aembke@gmail.com>"]
description = "Redis scanning utilities."
readme = "README.md"
repository = "https://github.com/aembke/redis-scanner.rs"
homepage = "https://github.com/aembke/redis-scanner.rs"
license = "MIT"
exclude = ["tests", ".circleci", "bin", ".github", "docs"]

[lib]
name = "redis_scanner"
test = true
doc = true

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
fred = { version = "9.0.1", features = ["i-std", "i-cluster", "replicas"] }
indicatif = "0.17"
csv = "1.1"
serde_json = "1.0"
pretty-table = "0.1"
parking_lot = "0.12"
chrono = "0.4"
once_cell = "1.19"
clap = { version = "4.5", features = ["wrap_help", "derive", "env"] }

[features]
default = []
enable-rustls = ["fred/enable-rustls"]
enable-native-tls = ["fred/enable-native-tls"]
vendored-openssl = ["fred/vendored-openssl"]
network-logs = ["fred/network-logs"]